@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.13 2024/5/7
+  <ul>
+    <li>iOS自動ビルドの追加</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.12 2024/5/7
   <ul>
     <li>Android自動ビルドの修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.11 2024/5/7
   <ul>
     <li>Android自動ビルドの修正</li>
@@ -297,12 +302,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.13 2024/5/7
+  <ul>
+    <li>Added the iOS automatic build</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.12 2024/5/7
   <ul>
     <li>Fixed the Android automatic build</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.11 2024/5/7
   <ul>
     <li>Fixed the Android automatic build</li>
